# terraform-aws-lambda

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  iam.tf  lambda.py  logs.tf  main.tf  outputs.tf  package.py  package.tf  schedule.tf  test_package_toml.py  tox.ini  variables.tf  versions.tf
.chglog/: config.yml
.github/workflows/: CODEOWNERS  lock.yml  pr-title.yml  pre-commit.yml  test.yml  trp_caller.yml
examples/alias/: README.md  main.tf  outputs.tf  versions.tf
examples/async/: README.md  main.tf  outputs.tf  versions.tf
examples/build-package/: README.md  main.tf  outputs.tf  versions.tf
examples/code-signing/: README.md  main.tf  outputs.tf  versions.tf
examples/complete/: README.md  main.tf  outputs.tf  versions.tf
examples/container-build-image/: README.md  main.tf  outputs.tf
examples/container-image/: README.md  main.tf  outputs.tf  versions.tf
examples/container-image-platform/: README.md  main.tf  versions.tf
examples/deploy/: .gitignore  README.md  deploy.sh  main.tf  outputs.tf
examples/ephemeral-stoage/: README.md  main.tf
examples/event-source-mapping/: README.md  main.tf  outputs.tf  versions.tf
examples/fixtures/: dirtree.sh
examples/fixtures/python-app-src-poetry/: pyproject.toml
examples/fixtures/python-app-uv/: pyproject.toml
examples/fixtures/python-app-uv/docker/: Dockerfile
examples/fixtures/python-app-uv/uv_lambda/: index.py
examples/fixtures/python3.9-app-src-poetry/: pyproject.toml
examples/multiple-regions/: README.md  main.tf  outputs.tf  versions.tf
tests/: conftest.py  test_build.py  test_package_toml.py  test_prepare.py  test_zip_source.py
wrappers/: README.md  main.tf  versions.tf
(+109 files in other folders)
