[project]
name = "uv_lambda"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests==2.31.0",
]

[tool.uv]
# This marker is for our Terraform parser to detect UV

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uv_lambda"]
include = ["uv_lambda/*"]
